src/objects/Question__c.object
<CustomObject>
    <description>COMPLIANCE SURVEY Stores all the questions for a compliance survey</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Link Action</label>
        <picklist>
            <picklistValues>
                <fullName>Redirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Tab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Describe_Description_N__c</fullName>
        <label>Describe Description N</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Describe_Description_Y__c</fullName>
        <label>Describe Description Y</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Describe_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Describe N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Describe_Title_N__c</fullName>
        <label>Describe Title N</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Title_Y__c</fullName>
        <label>Describe Title Y</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Y__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Describe Y</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Next_Question_N__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Question N</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Questions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Question_Y__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Question Y</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <label>Reminder</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Response_Status_N__c</fullName>
        <label>Response Status N</label>
        <picklist>
            <picklistValues>
                <fullName>Completed with Exceptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed with Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed without Exceptions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Status_Y__c</fullName>
        <label>Response Status Y</label>
        <picklist>
            <picklistValues>
                <fullName>Completed with Exceptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed with Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed without Exceptions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Y/N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Question</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Compliance Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Survey__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Compliance Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Link_Action_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>Link__c != null &amp;&amp; ISBLANK(TEXT(Action__c))</errorConditionFormula>
        <errorDisplayField>Action__c</errorDisplayField>
        <errorMessage>Please select action</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Link_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(TEXT(Action__c))) &amp;&amp; ISBLANK(Link__c)</errorConditionFormula>
        <errorDisplayField>Link__c</errorDisplayField>
        <errorMessage>Action will not work if Link field is empty</errorMessage>
    </validationRules>
</CustomObject>